# emulator

./: .clang-format  .gitignore  CMakeLists.txt  CMakePresets.json  README.md  main.cpp
.github/workflows/: build.yml
cmake/: emulatorConfig.cmake
cmake/presets/: configurePresets.json
include/: ALU.hpp  CPU.hpp  Clock.hpp  Memory.hpp  Opcode.hpp  PeriodicPulse.hpp  PulseGenerator.hpp  PulseOn.hpp  StatusRegister.hpp
src/: ALU.cpp  CPU.cpp  Clock.cpp  Memory.cpp  Opcode.cpp  PeriodicPulse.cpp  PulseGenerator.cpp
tests/: Opcode.cpp  binary_addition.cpp  binary_arithmetic.cpp  binary_subtraction.cpp  bit_manip.cpp  bit_manipulations.cpp  decimal_addition.cpp  decimal_arithmetic.cpp  decimal_subtraction.cpp  logical_operations.cpp  logical_shift.cpp  test.cpp
